--- a/src/abdullo.html
+++ b/src/abdullo.html
@@ -29,15 +29,15 @@
 
     <p class="text-blue-700 text-center text-2xl">Pricing plans</p> <br><br>
     <p class="font-bold text-7xl text-center">Choose a plan for a more <br> advanced business</p><br><br><br>
-    <div class="flex text-center ml-[600px]">
+    <div class="flex text-center ml-[100px] sm:ml-[600px]">
         <img src="./img/gironwavak.png" alt="">
         <p>Annual pricing (save 20%)</p>
     </div>
     <br><br><br>
-    <div class="flex gap-10 ml-32">
+    <div class="flex flex-col sm:flex-row gap-10 mx-[50px] sm:ml-32">
 
 
-        <div class="ml-10 border-gray-600 bordered-red-700">
+        <div class="ml-10 bg-slate-300 rounded-lg">
             <img src="./img/Icon.png" alt=""><br><br>
             <p class="font-bold">Starter</p> <br>
             <p>Lorem Ipsum is simply dummy text of the <br>
@@ -129,7 +129,7 @@
                 <img class="ml-10 mb-3" src="./img/choossaf.png" alt="">
             </div>
         </div>
-        <div>
+        <div class="bg-slate-300 rounded-lg">
             <img class="ml-20" src="./img/korona.png" alt="">
             <p class="font-bold ">Enterprise</p> <br><br>
             <p>Lorem Ipsum is simply dummy text of the <br>
@@ -176,27 +176,27 @@
     <p class="font-bold text-5xl text-center">Frequently asked questions</p> <br>
 
     <p class=" text-center">Everything you need to know about the product and billing.</p><br><br>
-    <div class="flex gap-32 ml-32">
-        <p class="font-bold ml-32">Is there a free trial available?</p><br> <br>
-        <img class="ml-40" src="./img/minus.png" alt="">
+    <div class="flex  gap-32 sm:ml-32">
+        <p class="font-bold sm:ml-32">Is there a free trial available?</p><br> <br>
+        <img class="sm:ml-40" src="./img/minus.png" alt="">
     </div>
-    <p class="ml-40">Yes, you can try us for fr ee for 30 days. If you want, we’ll provide you with <br>
+    <p class="sm:ml-40">Yes, you can try us for fr ee for 30 days. If you want, we’ll provide you with <br>
         a free, personalized 30-minute onboarding call to get you up and running <br>
         as soon as possible.</p><br><br>
-    <div class="flex gap-32 ml-32">
-        <p class="font-bold ml-32">How Can I Add More Emails To My Account?</p>
+    <div class="flex gap-32 sm:ml-32">
+        <p class="font-bold sm:ml-32">How Can I Add More Emails To My Account?</p>
+        <img class="sm:ml-40" src="./img/pilus.png" alt="">
+    </div> <br><br><br>
+    <div class="flex gap-32 sm:ml-32">
+        <p class="font-bold sm:ml-32">Can I Change Plans Or Cancel My Subscription At Any Time</p>
         <img class="ml-40" src="./img/pilus.png" alt="">
     </div> <br><br><br>
-    <div class="flex gap-32 ml-32">
-        <p class="font-bold ml-32">Can I Change Plans Or Cancel My Subscription At Any Time</p>
-        <img class="ml-40" src="./img/pilus.png" alt="">
-    </div> <br><br><br>
-    <div class="flex gap-32 ml-32">
-        <p class="font-bold ml-32">How Secure Is My Date With Sans CRM</p>
+    <div class="flex gap-32 sm:ml-32">
+        <p class="font-bold sm:ml-32">How Secure Is My Date With Sans CRM</p>
         <img class="ml-40" src="./img/pilus.png" alt="">
     </div><br><br><br>
-    <div class="flex gap-32 ml-32">
-        <p class="font-bold ml-32">What Is The Uptime Guarantee</p>
+    <div class="flex gap-32 sm:ml-32">
+        <p class="font-bold sm:ml-32">What Is The Uptime Guarantee</p>
         <img class="ml-40" src="./img/pilus.png" alt="">
     </div>
     <footer class="w-[100%] bg-[#1D1E25]">
