--- a/src/index2.html
+++ b/src/index2.html
@@ -25,47 +25,47 @@
             </div>
         </nav>
     </header>
-    <p class="text-4xl font-bold ml-12">Everything you need to get <br> the attention of your <br> audience</p>
+    <p class="sm:text-4xl text-[25px] font-bold py-[30px] sm:ml-12">Everything you need to get <br> the attention of your <br> audience</p>
     <br><br><br>
-    <div class="flex gap-[128px]">
-        <p class="ml-10 text-3xl">Our digital agency helps clients develop,<br>
+    <div class="flex flex-col sm:flex-row gap-[128px]">
+        <p class="sm:ml-10 text-[25px] sm:text-3xl">Our digital agency helps clients develop,<br>
             implement and maintain successful digital <br>
             marketing strategies across all channels. Also <br>
             work with you to build your website and create <br>
             online businesses that grow.</p>
         <img class="ml-[180px]" src="./img/strelka.png" alt="">
     </div> <br><br><br><br>
-    <div class="flex gap-10">
+    <div class="flex flex-col sm:flex-row gap-10">
         <div>
-            <img class="ml-[70px]" src="./img/notecofe.png" alt="">
+            <img class="sm:ml-[70px]" src="./img/notecofe.png" alt="">
         </div>
         <div>
-            <img class="ml-[50px]" src="./img/ochkarik.png" alt="">
+            <img class="sm:ml-[50px]" src="./img/ochkarik.png" alt="">
         </div>
         <div>
-            <img class="mt-[280px] mr-[500px]" src="./img/text.png" alt="">
+            <img class="sm:mt-[280px] sm:mr-[500px]" src="./img/text.png" alt="">
         </div>
         <div>
-            <img class="mr-[200px]" src="./img/nimibadan.png" alt="">
+            <img class="sm:mr-[200px]" src="./img/nimibadan.png" alt="">
         </div>
     </div> <br> <br> <br> <br> <br><br><br>
-    <div class="flex gap-[250px]">
-        <p class="font-bold text-5xl ml-20">Powerful ideas & <br> sales acceleration</p>
+    <div class="flex flex-col sm:flex-row sm:gap-[250px]">
+        <p class="font-bold text-[40px] sm:text-5xl sm:ml-20">Powerful ideas & <br> sales acceleration</p>
         <p class="text-3xl">We are a software development firm <br> specializing in digital products. We build <br>
             beautiful, functional and cross-platform <br> solutions that are accessible to all.</p>
     </div> <br><br><br><br><br><br>
-    <p class="font-bold text-5xl ml-20">Meet our team of creators, <br> designers, and world-class <br>
+    <p class="font-bold text-5xl sm:ml-20">Meet our team of creators, <br> designers, and world-class <br>
         problem solvers</p> <br><br>
-    <p class="ml-20">To become the company that customers want, it takes a <br>
+    <p class="sm:ml-20">To become the company that customers want, it takes a <br>
         group of passionate people. Get to know the people who lead</p><br><br><br>]
 
-    <div class="flex gap-[100px]">
+    <div class="flex flex-col sm:flex-row gap-[100px]">
         <img src="./img/nefr.png" alt="">
         <img src="./img/africanka.png" alt="">
         <img src="./img/riwaki.png" alt="">
     </div> <br><br><br>
-    <div class="flex gap-[100px]">
-        <p class="font-bold text-5xl ml-20">Join our team, The one <br> with the master touch</p>
+    <div class="flex flex-col py-[50px] sm:flex-row sm:gap-[100px]">
+        <p class="font-bold text-5xl sm:ml-20">Join our team, The one <br> with the master touch</p>
         <p>We believe it takes great people to make a great product. <br>
             That’s why we hire not only the perfect professional fits, <br>
             but people who embody our company values. <br> <br> See Open Position -></p>
