--- a/src/home.html
+++ b/src/home.html
@@ -12,12 +12,12 @@
             <img src="./img/Logo (10).png" alt="">
             <div class="flex gap-[80px] items-center">
                 <ul class="hidden sm:flex gap-[60px] text-[#1D1E25] text-[18px]">
-                    <li>Home </li>
-                    <li>About</li>
-                    <li>Blog</li>
-                    <li>Pricing</li>
+                    <li class="text-[#f5dfd0]">Home</li>
+                    <li class="hover:underline "> <a href="./about.html" target="_blank">About</a></li>
+                    <li class="hover:underline"> <a href="./home.html" target="_blank">Blog</a></li>
+                    <li class="hover:underline "><a href="./pricing.html" target="_blank">Pricing</a> </li>
                 </ul>
-                    <p class="text-[#1D1E25] text-[18px] font-bold pb-[5px] border-solid border-b-2 border-black">Contact us -></p>
+                    <p class="text-[#1D1E25] text-[18px] font-bold pb-[5px] border-solid border-b-2 hover:text-[#f5dfd0] border-black"> <a href="./contacts.html" target="_blank">Contact us -></a></p>
                 
             </div>
         </nav>
